Modificado css en varias paginas

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 
         <div class="contenedor-titulo">
     
-            <h2 class="titulo-seccion">ULTIMAS PROMOS</h2>
-            <i class="fa-solid fa-plane"></i></i>
+            <h2 class="titulo-seccion">PROMOS OTTER</h2>
+            <i class="fa-solid fa-fire"></i></i>
     
         </div>
 
