--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <nav class="menu2">
-        <a href="index.html"><div id="logo"><img src="imagenes/ottertravel icono.svg"></div></a>
+        <a href="index.html"><div id="logo"><img src="imagenes/ottertravel texto.svg"></div></a>
 
         <a href="index.html"><img id="otterlogo" src="imagenes/otter-solid.svg"></a>
 
@@ -41,7 +41,7 @@
         <div class="contenedor-titulo">
     
             <h2 class="titulo-seccion">PROMOS OTTER</h2>
-            <i class="fa-solid fa-fire"></i></i>
+            <i class="fa-solid fa-fire" style="color:red;"></i>
     
         </div>
 
