--- a/noticias.html
+++ b/noticias.html
@@ -16,7 +16,7 @@
 
 
     <nav class="menu2">
-        <a href="index.html"><div id="logo"><img src="imagenes/ottertravel icono.svg"></div></a>
+        <a href="index.html"><div id="logo"><img src="imagenes/ottertravel texto.svg"></div></a>
 
         <a href="index.html"><img id="otterlogo" src="imagenes/otter-solid.svg"></a>
 
