Modificado contacto.html

--- a/contacto.html
+++ b/contacto.html
@@ -33,7 +33,7 @@
         <div class="contenedor-titulo">
     
             <h2 class="titulo-seccion">Donde estamos</h2>
-            <i class="fa-solid fa-location"></i>
+            <i class="fa-solid fa-location-dot"></i>
     
         </div>
 
@@ -46,7 +46,7 @@
         </div>
 
         <div class="contenedor-titulo">
-            <h2 class="titulo-seccion">Contactanos</h2><i class="fa-solid fa-message"></i>
+            <h2 class="titulo-seccion">Contactanos</h2><i class="fa-solid fa-comment-dots"></i>
         </div>
 
         <form name="formulariovalido" class="contenedor-small
