Creada seccion de promociones en index.html

--- a/index.html
+++ b/index.html
@@ -45,6 +45,25 @@
     
         </div>
 
+        <div class="contenedor-transparente">
+            <div class="promo-contenedor" style="background-image: url(imagenes/crucero.jpg);">
+                <h3 class="titulo-verde">Nombre de la promo</h3>
+                <p class="texto-gris">1.234 USD</p><button type="button" class="boton-naranja">MÁS INFO</button>
+            </div>
+            <div class="promo-contenedor">
+                <h3 class="titulo-verde">Nombre de la promo</h3>
+                <p class="texto-gris">1.234 USD</p><button type="button" class="boton-naranja">MÁS INFO</button>
+            </div>
+            <div class="promo-contenedor">
+                <h3 class="titulo-verde">Nombre de la promo</h3>
+                <p class="texto-gris">1.234 USD</p><button type="button" class="boton-naranja">MÁS INFO</button>
+            </div>
+            <div class="promo-contenedor">
+                <h3 class="titulo-verde">Nombre de la promo</h3>
+                <p class="texto-gris">1.234 USD</p><button type="button" class="boton-naranja">MÁS INFO</button>
+            </div>
+        </div>
+
         <div class="contenedor-titulo">
         
             <h2 class="titulo-seccion">Por qué elegirnos?</h2>
