Añadidas varias imagenes nuevas optimizadas para web, modificado html y estilos en varios lugares

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="contenedor-transparente">
-            <div class="promo-contenedor" style="background-image: url(imagenes/crucero.jpg);">
+            <div class="promo-contenedor">
                 <h3 class="titulo-verde">Nombre de la promo</h3>
                 <p class="texto-gris">1.234 USD</p><button type="button" class="boton-naranja">MÁS INFO</button>
             </div>
