--- a/noticias.html
+++ b/noticias.html
@@ -66,8 +66,9 @@
         <i class="fa-solid fa-newspaper"></i></i>
     </div>
     <div class="contenedor-articulo">
-       
+
         <h3 class="titulo-nota">Desde el Puerto de Buenos Aires: los precios para tomar un crucero, que siguen a valores similares a los de hace tres años</h3>
+        <img src="imagenes/brujula.jpg" style="width:100%">
         <p class="texto-verde">
             Después de dos años, este verano vuelven los grandes barcos a la terminal porteña, con itinerarios por Brasil, la Patagonia y la Antártida; sin aéreos y con la posibilidad de disfrutar tarifas prepandemia, que todavía no se recuperaron en dólares
         </p>
