Modificado promociones en index, añadidas nuevas imagenes y actualizado estilos css

--- a/contacto.html
+++ b/contacto.html
@@ -32,8 +32,7 @@
 
         <div class="contenedor-titulo">
     
-            <h2 class="titulo-seccion">Donde estamos</h2>
-            <i class="fa-solid fa-location-dot"></i>
+            <h2 class="titulo-seccion">Donde estamos <i class="fa-solid fa-location-dot"></i></h2>
     
         </div>
 
@@ -46,7 +45,7 @@
         </div>
 
         <div class="contenedor-titulo">
-            <h2 class="titulo-seccion">Contactanos</h2><i class="fa-solid fa-comment-dots"></i>
+            <h2 class="titulo-seccion">Contactanos <i class="fa-solid fa-comment-dots"></i></h2>
         </div>
 
         <form name="formulariovalido" class="contenedor-small
