--- a/index.html
+++ b/index.html
@@ -40,25 +40,24 @@
 
         <div class="contenedor-titulo">
     
-            <h2 class="titulo-seccion">PROMOS OTTER</h2>
-            <i class="fa-solid fa-fire" style="color:red;"></i>
+            <h2 class="titulo-seccion">🔥 PROMOS OTTER 🔥</h2>
     
         </div>
 
         <div class="contenedor-transparente">
-            <div class="promo-contenedor">
+            <div class="promo-contenedor" style="background-image:url(imagenes/peritomorento.jpg)">
                 <h3 class="titulo-nota">GLACIAR PERITO MORENO 5 Dias - 4 Noches</h3>
                 <p class="texto-gris">$ 78.340</p><button type="button" class="boton-naranja">MÁS INFO</button>
             </div>
-            <div class="promo-contenedor">
+            <div class="promo-contenedor" style="background-image:url(imagenes/bahialopez.jpg)">
                 <h3 class="titulo-nota">BAHIA LOPEZ 5 Dias - 4 Noches</h3>
                 <p class="texto-gris">$ 54.191</p><button type="button" class="boton-naranja">MÁS INFO</button>
             </div>
-            <div class="promo-contenedor">
+            <div class="promo-contenedor" style="background-image:url(imagenes/colonentrerios.jpg)">
                 <h3 class="titulo-nota">COLON - Entre Rios 3 Dias - 2 Noches</h3>
                 <p class="texto-gris">$ 18.578</p><button type="button" class="boton-naranja">MÁS INFO</button>
             </div>
-            <div class="promo-contenedor">
+            <div class="promo-contenedor" style="background-image:url(imagenes/capilladelmonte.jpg)">
                 <h3 class="titulo-nota">CAPILLA DEL MONTE 5 Dias - 3 Noches</h3>
                 <p class="texto-gris">$ 22.440</p><button type="button" class="boton-naranja">MÁS INFO</button>
             </div>
