--- a/paquetes.html
+++ b/paquetes.html
@@ -74,26 +74,37 @@
          <style>
             /* Style the button that is used to open and close the collapsible content */
           .collapsible {
-             background-color: #eee;
-             color: #444;
+             background-color: aquamarine;
+             color: black;
              cursor: pointer;
-             padding: 18px;
+             padding: 0 1em;
              width: 100%;
              border: none;
              text-align: left;
              outline: none;
-             font-size: 15px;
+             font-size: 1em;
              }
+
+           .collapsible:after {
+            float: right;
+            content: '\02795';
+            color:aquamarine;
+            }
 
          /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
          
          .active, .collapsible:hover {
-           background-color: #ccc;
+           background-color: black;
+           color:aquamarine;
            }
+
+          .active:after {
+          content: '\2796';
+          }
 
          /* Style the collapsible content. Note: hidden by default */
          .content {
-           padding: 0 18px;
+           padding: 0 1em;
            display: none;
            overflow: hidden;
            background-color: #f1f1f1;
