Modificaciones agregadas en varias partes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,700;1,100;1,300;1,400;1,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/09e7b012e5.js" crossorigin="anonymous"></script>
         <script src="script.js"></script>
     </head>
@@ -21,19 +22,19 @@
 
         <div class="menuitem-container">
             <a href="index.html"><p class="menuitem">INICIO</p></a>
-            <a href="paquetes.html"><p class="menuitem">PAQUETES</p></a>
+            <a href="destinos.html"><p class="menuitem">DESTINOS</p></a>
             <a href="noticias.html"><p class="menuitem">NOTICIAS</p></a>
             <a href="contacto.html"><p class="menuitem">CONTACTO</p></a>
         </div>
     </nav>
 
-    <div class="contenedor-textolanding">
-
-        <img class="logolarge" src="imagenes/otter-large.svg">
-        <p class="quote-large">
-            En OTTER TRAVEL nuestra misión es garantizar una experiencia única e integral, enfatizando en la atención personalizada y la calidad del servicio, de acuerdo a las necesidades individuales y variables de gusto, preferencia y presupuesto.
-        </p>
-
+    <div class="contenedor-imgfondo">
+        <div class="contenedor-textolanding">
+          <img class="logolarge" src="imagenes/otter-large.svg">
+          <p class="quote-large">
+            <mark>En OTTER TRAVEL nuestra misión es garantizar una experiencia única e integral, enfatizando en la atención personalizada y la calidad del servicio, de acuerdo a las necesidades individuales y variables de gusto, preferencia y presupuesto.</mark>
+          </p>
+        </div>
     </div>
 
     <div class="main">
