Creada seccion de créditos y modificado css

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         </p>
         <p>943 Av. Cabildo, Buenos Aires
         </p>
+        <p><a href="creditos.html">Creditos y fuentes del contenido de este sitio</a></p>
         </div>
     </footer>
 </body>
