Modificaciones a seccion creditos.html, modificaciones de css

--- a/creditos.html
+++ b/creditos.html
@@ -37,37 +37,37 @@
         <div class="contenedor-small">
             <h3>Imagenes</h3>
 
-            Photo by <a href="https://unsplash.com/@mareksminder?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Claudia Altamimi</a> on <a href="https://unsplash.com/s/photos/caribbean?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <a href="https://unsplash.com/photos/PSD6ffClG0w" target="__blank">Abaka Bay and Resort, La Hafte, Ile a Vache,Haiti por Claudia Altamimi</a>
   
             <br>
-            Photo by <a href="https://unsplash.com/@ettocl?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Léonard Cotte</a> on <a href="https://unsplash.com/s/photos/paris?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <a href="https://unsplash.com/photos/R5scocnOOdM" target="__blank">Paris por Léonard Cotte</a>
   
             <br>
-            Photo by <a href="https://unsplash.com/@jezar?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jezael Melgoza</a> on <a href="https://unsplash.com/s/photos/tokyo?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <a href="https://unsplash.com/photos/layMbSJ3YOE" target="__blank">Tokyo por Jezael Melgoza</a>
   
             <br>
-            Photo by <a href="https://unsplash.com/@fertavora?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Fernando Távora</a> on <a href="https://unsplash.com/s/photos/argentina?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-  
-            <br>
-            Photo by <a href="https://unsplash.com/@jannerboy62?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nick Fewings</a> on <a href="https://unsplash.com/s/photos/boarding-cruise?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <a href="https://unsplash.com/photos/jN8wERXCnkE" target="__blank">San Carlos de Bariloche, Río Negro, Argentina por Fernando Távora</a>
 
             <br>
-            Photo by <a href="https://unsplash.com/@adriibds?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Adriana Lorena Benavides Estrada</a> on <a href="https://unsplash.com/s/photos/perito-moreno?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <a href="https://unsplash.com/photos/lirOPuejTbM" target="__blank">Brujula Digital por Nick Fewings</a>
+
+            <br>
+            <a href="https://unsplash.com/photos/afyJnOzcCm4" target="__blank">Glaciar Perito Moreno por Adriana Lorena Benavides Estrada</a>
   
             <br>
-            <a href="https://unsplash.com/photos/odII8BzuWU8">Praia dos Carneiros, Brazil por David Emrich</a>
+            <a href="https://unsplash.com/photos/odII8BzuWU8" target="__blank">Praia dos Carneiros, Brazil por David Emrich</a>
 
             <br>
-            Photo by <a href="https://unsplash.com/@marinajune?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">marina</a> on <a href="https://unsplash.com/s/photos/ocean?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <a href="https://unsplash.com/photos/YmQ0-nmWcV0" target="__blank">Cathedral Cove, Nueva Zealanda por marinajune</a>
 
             <br>
-            Photo by <a href="https://unsplash.com/@silasbaisch?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Silas Baisch</a> on <a href="https://unsplash.com/s/photos/ocean?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <a href="https://unsplash.com/photos/p-6S-filXzM" target="__blank">Ola por Silas Baisch</a>
   
             <br>
-            Photo by <a href="https://unsplash.com/@gigakhurtsilava?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Giga Khurtsilava</a> on <a href="https://unsplash.com/s/photos/ocean?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <a href="https://unsplash.com/photos/5kwVYW8ZIHo" target="__blank">Oceano por Giga Khurtsilava</a>
 
             <br>
-            Photo by <a href="https://unsplash.com/@thenata?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Anastasia Taioglou</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+            <a href="https://unsplash.com/photos/CTivHyiTbFw" target="__blank">Oceano por Anastasia Taioglou</a>
  
             
             <h3>Articulos e información:</h3>
@@ -76,6 +76,10 @@
 
             <br>
             <a href="https://www.argtravelagency.com.ar/informacion-para-el-turista/">ArgTravelAgency</a>
+
+            <p></p>
+            <br>
+            Fuentes tipográficas de Google Fonts. Gráficos e íconos de FontAwesome.
         </div>
 
         
