--- a/destinos.html
+++ b/destinos.html
@@ -43,10 +43,10 @@
         </div>
 
         <div class="contenedor-transparente">
-            <div class="promo-contenedor" style="background-image:url(imagenes/argentina.jpg)"><p>DESTINOS NACIONALES</p></div>
-            <div class="promo-contenedor" style="background-image:url(imagenes/caribe.jpg)"><p>DESTINOS  CARIBE</p></div>
-            <div class="promo-contenedor" style="background-image:url(imagenes/europa.jpg)"><p>CIUDADES EUROPEAS</p></div>
-            <div class="promo-contenedor" style="background-image:url(imagenes/asia.jpg)"><p>CIUDADES ASIATICAS</p></div>
+            <div class="promo-contenedor" style="background-image:url(imagenes/argentina.jpg)"><p><mark>DESTINOS NACIONALES</mark></p></div>
+            <div class="promo-contenedor" style="background-image:url(imagenes/caribe.jpg)"><p><mark>DESTINOS  CARIBE</mark></p></div>
+            <div class="promo-contenedor" style="background-image:url(imagenes/europa.jpg)"><p><mark>CIUDADES EUROPEAS</mark></p></div>
+            <div class="promo-contenedor" style="background-image:url(imagenes/asia.jpg)"><p><mark>CIUDADES ASIATICAS</mark></p></div>
         </div>
 
         <div class="contenedor-titulo">
