Añadidos cambios extensivos a varios archivos

--- a/creditos.html
+++ b/creditos.html
@@ -41,6 +41,14 @@
   
             <br>
             <a href="https://unsplash.com/photos/R5scocnOOdM" target="__blank">Paris por Léonard Cotte</a>
+
+            <br>
+            <a href="https://unsplash.com/photos/U6t80TWJ1DM">Playa Blanca, Saboga, Panama por Rowan Heuvel</a>
+
+            <br>
+            <a href="https://unsplash.com/photos/n7DY58YFg9E">New Caledonia por Sébastien Jermer</a>
+
+
   
             <br>
             <a href="https://unsplash.com/photos/layMbSJ3YOE" target="__blank">Tokyo por Jezael Melgoza</a>
