--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
     </nav>
 
 
-    <div class="contenedor-imgfondo" style="background-image:url(imagenes/playawide.jpg)"><a href="index.html"><img src="imagenes/otter-large.svg" style="max-height:17em; margin: 3em auto;width: 100%;"></a></div>
+    <div class="contenedor-imgfondo" style="background-image:url(imagenes/underwater.jpg)"><a href="index.html"><img src="imagenes/otter-large.svg" style="max-height:17em; margin: 3em auto;width: 100%;"></a></div>
     
     <div class="main">
 
