Añadida nueva API, cambios de estilo en algunas partes

--- a/destinos.html
+++ b/destinos.html
@@ -2,6 +2,8 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
+        <link rel="icon" type="image/x-icon" href="/imagenes/otter-large.svg">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,7 +13,7 @@
         <script src="script.js"></script>
     </head>
 
-<title>Paquetes</title>
+<title>Destinos</title>
 
 <body>
 
@@ -105,7 +107,6 @@
              border: none;
              text-align: left;
              outline: none;
-             font-size: x-large;
              font-weight: 700;
              }
 
@@ -137,22 +138,24 @@
 
          <div class="contenedor-small">
 
-          <h4>Documentación para Viajar</h4>
+          <h3>Documentación para Viajar</h3>
 
           <p class="texto-gris">Lleve siempre mas de un documento al viajar, todos los pasajeros deberán presentar la documentación personal en perfecto estado de conservación y vigencia, pudiendo viajar con cedula de identidad de la Policía Federal, o Documento Nacional de Identidad, o Pasaporte (este último se exige para países no limítrofes) y Visa si correspondiese.
           <br>En caso de Extranjeros, deberán viajar con su Pasaporte de origen en plena vigencia y Visa si correspondiese.
           <br>En caso de viajar menores de 21 años, los padres deberán llevar Libreta de casamiento y/o partida de nacimiento. En el caso que no viaje uno o ninguno de los padres, el menor deberá tener Poder General para viaje otorgado ante Escribano Público Nacional o Juez de Paz.
           <br>Se recuerde que los menores que viajen con DNI, éste se deberá renovar a los 8 y 16 años cumplidos.</p>
 
+          <p class="texto-gris">Expandir para leer:</p>
+
           <button type="button" class="collapsible">Documentación que deberá presentar todo argentino para salir del país a un país limítrofe</button>
          
          <div class="content">
-         <h4>Pasajeros Mayores de Edad</h4>
+         <h3>Pasajeros Mayores de Edad</h3>
 
          <p class="texto-gris">DNI, Cédula de Identidad y/o Pasaporte</p>
 
-         <h4>Pasajeros Menores de Edad</h4>
-         <h5>Si viaja solo o en compañía de solo uno de sus padres:</h5>
+         <h3>Pasajeros Menores de Edad</h3>
+         <h4>Si viaja solo o en compañía de solo uno de sus padres:</h4>
 
          <p class="texto-gris">DNI, Cédula de Identidad y/o Pasaporte
 
@@ -160,7 +163,7 @@
 
          <br>Partida de nacimiento, libreta de matrimonio.</p>
 
-         <h5>Si viaja con ambos padres:</h5>
+         <h4>Si viaja con ambos padres:</h4>
 
          <p class="texto-gris">DNI, Cédula de Identidad y/o Pasaporte Vigente, Partida de Nacimiento o Libreta de Matrimonio.</p>
          </div>
@@ -169,18 +172,18 @@
          </button>
 
          <div class="content">
-         <h4>Pasajeros Mayores de Edad</h4>
+         <h3>Pasajeros Mayores de Edad</h3>
          <p class="texto-gris">Pasaporte de su nacionalidad vigente.<br>
          Visa en caso de corresponder.</p>
 
-         <h4>Pasajeros Menores de Edad</h4>
+         <h3>Pasajeros Menores de Edad</h3>
  
-         <h5>Si viaja solo o en compañía de solo uno de sus padres:</h5>
+         <h4>Si viaja solo o en compañía de solo uno de sus padres:</h4>
 
          <p class="texto-gris">Permiso o Autorización de Viaje del padre faltante (Si usted vive en la Ciudad de Buenos Aires, dicho permiso lo tramita ante escribano público y lo legaliza ante el Colegio de Escribanos de esta ciudad; si su domicilio es de Provincia, similar trámite u opcionalmente ante la justicia en lo civil del departamento judicial de su zona).<br>
          Partida de Nacimiento, o Libreta de Matrimonio.</p>
 
-         <h5>Si viaja con ambos padres:</h5>
+         <h4>Si viaja con ambos padres:</h4>
 
          <p class="texto-gris">Pasaporte Argentino vigente.<br>
          Partida de Nacimiento o Libreta de Matrimonio.<br>
@@ -192,12 +195,12 @@
          <div class="content">
          <p class="texto-gris">Al llegar al aeropuerto, nunca deje las valijas solas, de manera de evitar la pérdida de parte de su equipaje. Por otro lado, para evitar robos de oportunistas, es recomendable que los pasajeros utilicen valijas de colores o lo menos estándar posible, para que sean fácilmente identificables por sus propietarios en todo momento.</p>
 
-         <h4>Vuelos de Cabotaje</h4>
+         <h3>Vuelos de Cabotaje</h3>
          <p class="texto-gris">Los limites de peso para el equipaje son los siguientes:
          <br>Clase Turista: 15 kilos
          <br>Clase Ejecutiva: 30 kilos</p>
 
-         <h4>Vuelos al Exterior</h4>
+         <h3>Vuelos al Exterior</h3>
          <p class="texto-gris">Es importante asesorarse oportunamente sobre el peso permitido de transporte, ya que dependen del sistema utilizado en el país de destino. En los países que utilizan límites de peso (la mayoría), los pasajeros pueden llevar:
          <br>Clase Turista: 20 kilos
          <br>Los Club Gold: 30 kilos
