--- a/contacto.html
+++ b/contacto.html
@@ -2,6 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -9,6 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/09e7b012e5.js" crossorigin="anonymous"></script>
         <script src="script.js"></script>
+        <link rel="icon" type="image/x-icon" href="/imagenes/otter-large.svg">
     </head>
 
 <title>Contacto</title>
