--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="https://kit.fontawesome.com/09e7b012e5.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <link rel="icon" type="image/x-icon" href="/imagenes/otter-large.svg">
+        <link rel="icon" type="image/x-icon" href="/imagenes/otter-favicon.ico">
     </head>
 
 <title>Otter Travel</title>
@@ -84,8 +84,7 @@
             <section v-if="errored">
               <p>Lo sentimos, no es posible obtener la información en este momento, por favor intente nuevamente mas tarde</p>
             </section>
-          
-            </section>
+
           </div>
           <script src="api.js"></script>
 
