--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Krona+One&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/09e7b012e5.js" crossorigin="anonymous"></script>
         <script src="script.js"></script>
-        <link rel="icon" type="image/x-icon" href="/imagenes/otter-large.svg">
+        <link rel="icon" type="image/x-icon" href="/imagenes/otter-favicon.ico">
     </head>
 
 <title>Contacto</title>
