--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <script src="https://kit.fontawesome.com/09e7b012e5.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-        <link rel="icon" type="image/x-icon" href="/imagenes/otter-favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/imagenes/otterfavicon.ico">
     </head>
 
 <title>Otter Travel</title>
