--- a/noticias.html
+++ b/noticias.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <link rel="icon" type="image/x-icon" href="/imagenes/otter-favicon.ico">
+        <link rel="icon" type="image/x-icon" href="/imagenes/otterfavicon.ico">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
